objects/SLCA2__TestObject__c.object
<CustomObject>
    <fields>
        <fullName>SLCA2__BooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BooleanField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLCA2__CurrencyField__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>CurrencyField</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLCA2__DateField__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>DateField</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLCA2__DateTimeField__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>DateTimeField</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLCA2__End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLCA2__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLCA2__MultiSelectField__c</fullName>
        <label>MultiSelectField</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLCA2__PicklistField__c</fullName>
        <label>PicklistField</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <color>#0B6FCE</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#78C953</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#E27001</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#A845DC</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#F3D904</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>Dreamforce Booth Schedule</fullName>
                    <color>#A53711</color>
                    <label>Dreamforce Booth Schedule</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLCA2__Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLCA2__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>TestObject</label>
    <nameField>
        <label>TestObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>